--- a/src/main/webapp/resources/css/estilo.css
+++ b/src/main/webapp/resources/css/estilo.css
@@ -28,6 +28,7 @@ p{
     background-color: #666666;
      overflow: hidden;
     border: 5px double;
+    height: 150px;
 }
 #nav ul{
     list-style-type: none;
@@ -37,10 +38,12 @@ p{
     display: flex;
     flex-direction: row;
     width: 100%;
-    justify-content: center;   
+    justify-content: center;  
 }
 #nav ul li{
     background-color : #999999;
+    padding: 10px;
+    width: 200px;
 }
 #nav ul li a{  
     color : #000;
@@ -48,6 +51,7 @@ p{
     text-transform : uppercase ;
     display : block ;  
     padding : 10px 10px 10px 20px;
+    width: 200px;
 }
 
 #nav ul li a:hover{
